--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -57,98 +57,36 @@ jobs:
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-fix-csv-dayoff-nosettings.patch"
 
-      - name: Add Engineer Name input + use in CSV filename (robust, no patch)
+      - name: Add Engineer Name input + include in CSV filename (robust, no patch)
         run: |
           set -e
           cd "${{ steps.findroot.outputs.root }}"
-          python3 - <<'PY'
-          from pathlib import Path
-          import re
-
-          home = Path("client/src/pages/Home.tsx")
-          s = home.read_text(encoding="utf-8")
-
-          # Idempotency marker
-          if "__ENGINEER_NAME_FIELD__" not in s:
-              # Ensure useState exists in react import (usually already there)
-              if re.search(r'from\s+[\'"]react[\'"]', s):
-                  m = re.search(r'import\s+[^;]*\{\s*([^}]*)\s*\}[^;]*from\s+[\'"]react[\'"]', s)
-                  if m and "useState" not in m.group(1):
-                      s = re.sub(
-                          r'(import\s+[^;]*\{\s*)([^}]*)\s*(\}[^;]*from\s+[\'"]react[\'"])',
-                          lambda mm: mm.group(1) + (mm.group(2).strip() + ", useState") + " " + mm.group(3),
-                          s, count=1
-                      )
-
-              state_block = r'''
-  /* __ENGINEER_NAME_FIELD__ */
-  const [engineerName, setEngineerName] = useState(() => {
-    try { return localStorage.getItem("engitrack_engineer_name") || ""; } catch { return ""; }
-  });
-
-  const engineerSlug = (engineerName || "engineer")
-    .trim()
-    .toLowerCase()
-    .replace(/[^a-z0-9]+/g, "-")
-    .replace(/(^-|-$)/g, "");
-
-  const onEngineerNameChange = (v: string) => {
-    setEngineerName(v);
-    try { localStorage.setItem("engitrack_engineer_name", v); } catch {}
-  };
-
-  const todayIso = new Date().toISOString().slice(0,10);
-  const fileName = `timesheet-${engineerSlug}-${todayIso}.csv`;
-'''
-              s2, n = re.subn(r'(export\s+default\s+function\s+Home\s*\([^)]*\)\s*\{\s*)', r'\1' + state_block, s, count=1)
-              if n == 0:
-                  s2, n = re.subn(r'(function\s+Home\s*\([^)]*\)\s*\{\s*)', r'\1' + state_block, s, count=1)
-              if n == 0:
-                  raise SystemExit("Could not find Home() component to inject engineerName state")
-              s = s2
-
-          # Inject UI for engineer name
-          if "__ENGINEER_NAME_INPUT__" not in s:
-              ui_block = r'''
-          {/* __ENGINEER_NAME_INPUT__ */}
-          <div className="w-full max-w-3xl mx-auto px-4 mt-2">
-            <label className="block text-sm font-medium mb-1">Engineer Name</label>
-            <input
-              value={engineerName}
-              onChange={(e) => onEngineerNameChange(e.target.value)}
-              placeholder="Type your name"
-              className="w-full rounded-md border px-3 py-2 text-base"
-            />
-          </div>
-'''
-              s3, n = re.subn(r'(<h1[^>]*>.*?</h1>)', r'\1' + ui_block, s, count=1, flags=re.S)
-              if n == 0:
-                  s3, n = re.subn(r'(return\s*\(\s*<div[^>]*>\s*)', r'\1' + ui_block, s, count=1, flags=re.S)
-              if n == 0:
-                  raise SystemExit("Could not place Engineer Name input UI")
-              s = s3
-
-          # Make writeFile use fileName for path if it currently uses a literal *.csv path
-          if "Filesystem.writeFile" in s:
-              s_new, n = re.subn(
-                  r'(Filesystem\.writeFile\s*\(\s*\{\s*[^}]*\bpath\s*:\s*)([\'"][^\'"]+\.csv[\'"])(\s*,)',
-                  r'\1fileName\3',
-                  s, count=1, flags=re.S
-              )
-              if n > 0:
-                  s = s_new
-
-          # Try to prepend Engineer line to the CSV string variable if present
-          if "Engineer," not in s:
-              s = re.sub(
-                  r'(const\s+csv(Content|Data)?\s*=\s*)([`\'"])',
-                  r'\1\2Engineer,${engineerName}\n',
-                  s, count=1
-              )
-
-          home.write_text(s, encoding="utf-8")
-          print("OK: Engineer Name input + filename logic applied.")
-          PY
+          python3 -c 'from pathlib import Path; import re; home=Path("client/src/pages/Home.tsx"); s=home.read_text(encoding="utf-8");
+marker="__ENGINEER_NAME_FIELD__";
+if marker not in s:
+  # ensure useState in react import (usually already present)
+  m=re.search(r"import\\s+[^;]*\\{\\s*([^}]*)\\s*\\}[^;]*from\\s+[\\\"\\x27]react[\\\"\\x27]", s);
+  if m and "useState" not in m.group(1):
+    s=re.sub(r"(import\\s+[^;]*\\{\\s*)([^}]*)(\\}\\s*[^;]*from\\s+[\\\"\\x27]react[\\\"\\x27])",
+             lambda mm: mm.group(1)+(mm.group(2).strip()+", useState")+" "+mm.group(3), s, count=1);
+  state = "\\n  /* __ENGINEER_NAME_FIELD__ */\\n  const [engineerName, setEngineerName] = useState(() => {\\n    try { return localStorage.getItem(\\\"engitrack_engineer_name\\\") || \\\"\\\"; } catch { return \\\"\\\"; }\\n  });\\n\\n  const engineerSlug = (engineerName || \\\"engineer\\\")\\n    .trim()\\n    .toLowerCase()\\n    .replace(/[^a-z0-9]+/g, \\\"-\\\")\\n    .replace(/(^-|-$)/g, \\\"\\\");\\n\\n  const onEngineerNameChange = (v: string) => {\\n    setEngineerName(v);\\n    try { localStorage.setItem(\\\"engitrack_engineer_name\\\", v); } catch {}\\n  };\\n\\n  const todayIso = new Date().toISOString().slice(0,10);\\n  const fileName = `timesheet-${engineerSlug}-${todayIso}.csv`;\\n";
+  s2,n=re.subn(r"(export\\s+default\\s+function\\s+Home\\s*\\([^)]*\\)\\s*\\{\\s*)", r"\\1"+state, s, count=1);
+  if n==0:
+    s2,n=re.subn(r"(function\\s+Home\\s*\\([^)]*\\)\\s*\\{\\s*)", r"\\1"+state, s, count=1);
+  if n==0: raise SystemExit("Could not find Home() to inject engineer name state");
+  s=s2;
+# inject UI after first </h1> else after return <div...>
+if "__ENGINEER_NAME_INPUT__" not in s:
+  ui="\\n          {/* __ENGINEER_NAME_INPUT__ */}\\n          <div className=\\\"w-full max-w-3xl mx-auto px-4 mt-2\\\">\\n            <label className=\\\"block text-sm font-medium mb-1\\\">Engineer Name</label>\\n            <input\\n              value={engineerName}\\n              onChange={(e) => onEngineerNameChange(e.target.value)}\\n              placeholder=\\\"Type your name\\\"\\n              className=\\\"w-full rounded-md border px-3 py-2 text-base\\\"\\n            />\\n          </div>\\n";
+  s3,n=re.subn(r"(<h1[^>]*>.*?</h1>)", r"\\1"+ui, s, count=1, flags=re.S);
+  if n==0:
+    s3,n=re.subn(r"(return\\s*\\(\\s*<div[^>]*>\\s*)", r"\\1"+ui, s, count=1, flags=re.S);
+  if n==0: raise SystemExit("Could not place Engineer Name input UI");
+  s=s3;
+# switch writeFile path literal to fileName if present
+s4=re.sub(r"(Filesystem\\.writeFile\\s*\\(\\s*\\{\\s*[^}]*\\bpath\\s*:\\s*)([\\\"\\x27][^\\\"\\x27]+\\.csv[\\\"\\x27])(\\s*,)", r"\\1fileName\\3", s, count=1, flags=re.S);
+s=s4;
+home.write_text(s, encoding="utf-8"); print("OK: Engineer Name + filename added");'
 
       - name: Remove dedicated email bar (UI only, safe)
         run: |
@@ -158,63 +96,26 @@ jobs:
       - name: Remove Unpaid Break UI (safe, never fails)
         run: |
           set -e
-          ROOT="${{ steps.findroot.outputs.root }}"
-          HOME_TSX="$ROOT/client/src/pages/Home.tsx"
-
-          if [ ! -f "$HOME_TSX" ]; then
-            echo "WARNING: Home.tsx not found; skipping"
-            exit 0
-          fi
-
-          cd "$ROOT"
-          python3 - <<'PY'
-          from pathlib import Path
-          import re
-
-          home = Path("client/src/pages/Home.tsx")
-          s = home.read_text(encoding="utf-8")
-
-          if "__UNPAID_BREAK_REMOVED__" in s:
-              print("Already removed; skipping")
-              raise SystemExit(0)
-
-          m = re.search(r"<label[^>]*>\s*Unpaid\s*Break[^<]*</label>", s, flags=re.I)
-          if not m:
-              print("WARNING: Unpaid Break label not found; skipping")
-              raise SystemExit(0)
-
-          start = s.rfind("<div", 0, m.start())
-          if start == -1:
-              print("WARNING: Container <div> not found; skipping")
-              raise SystemExit(0)
-
-          i = start
-          depth = 0
-          end = -1
-          while i < len(s):
-              if s.startswith("<div", i):
-                  depth += 1
-                  i += 4
-                  continue
-              if s.startswith("</div>", i):
-                  depth -= 1
-                  i += 6
-                  if depth == 0:
-                      end = i
-                      break
-                  continue
-              i += 1
-
-          if end == -1:
-              print("WARNING: Could not close container; skipping")
-              raise SystemExit(0)
-
-          block = s[start:end]
-          replacement = "{/* __UNPAID_BREAK_REMOVED__ */}\n{false && (\n" + block + "\n)}"
-          s2 = s[:start] + replacement + s[end:]
-          home.write_text(s2, encoding="utf-8")
-          print("OK: Unpaid Break UI hidden")
-          PY
+          cd "${{ steps.findroot.outputs.root }}"
+          python3 -c 'from pathlib import Path; import re; home=Path("client/src/pages/Home.tsx");
+s=home.read_text(encoding="utf-8");
+if "__UNPAID_BREAK_REMOVED__" in s: print("Already removed"); raise SystemExit(0);
+m=re.search(r"<label[^>]*>\\s*Unpaid\\s*Break[^<]*</label>", s, flags=re.I);
+if not m: print("WARNING: Unpaid Break not found; skipping"); raise SystemExit(0);
+start=s.rfind("<div", 0, m.start());
+if start==-1: print("WARNING: container not found; skipping"); raise SystemExit(0);
+i=start; depth=0; end=-1;
+while i < len(s):
+  if s.startswith("<div", i): depth+=1; i+=4; continue
+  if s.startswith("</div>", i): depth-=1; i+=6; 
+  if depth==0 and i>start and s[i-6:i]=="</div>": end=i; break
+  continue
+  i+=1
+if end==-1: print("WARNING: could not close container; skipping"); raise SystemExit(0);
+block=s[start:end];
+rep="{/* __UNPAID_BREAK_REMOVED__ */}\\n{false && (\\n"+block+"\\n)}";
+home.write_text(s[:start]+rep+s[end:], encoding="utf-8");
+print("OK: Unpaid Break hidden");'
 
       - name: Copy watermark image into app public folder
         run: |
