--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Setup Java 21
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -52,223 +52,106 @@ jobs:
           npm i -D @capacitor/cli @capacitor/core @capacitor/android
           npm i @capacitor/filesystem @capacitor/share @capacitor/clipboard
 
-      - name: Apply CSV patch (known-working)
+      - name: Apply CSV patch
         run: |
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-fix-csv-dayoff-nosettings.patch"
 
-      - name: Remove dedicated email bar (UI only, safe)
+      - name: Remove email bar
         run: |
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-remove-email-ui-safe.patch"
 
-      - name: Add Engineer Name field + use in CSV filename (robust)
+      - name: Add Engineer Name + CSV filename logic (SAFE)
         run: |
           set -e
           cd "${{ steps.findroot.outputs.root }}"
 
-          cat > _patch_engineer_name.py <<'PY'
-          from pathlib import Path
-          import re
+          cat <<'PY' > engineer_patch.py
+from pathlib import Path
+import re
 
-          home = Path("client/src/pages/Home.tsx")
-          if not home.exists():
-              print("WARNING: Home.tsx not found; skipping engineer name")
-              raise SystemExit(0)
+home = Path("client/src/pages/Home.tsx")
+if not home.exists():
+    print("Home.tsx not found")
+    exit(0)
 
-          s = home.read_text(encoding="utf-8")
+s = home.read_text(encoding="utf-8")
 
-          # ---- 1) Inject state + helpers (idempotent) ----
-          if "__ENGINEER_NAME_FIELD__" not in s:
-              # ensure useState import exists
-              m = re.search(r'import\s+[^;]*\{\s*([^}]*)\s*\}[^;]*from\s+[\'"]react[\'"]', s)
-              if m and "useState" not in m.group(1):
-                  s = re.sub(
-                      r'(import\s+[^;]*\{\s*)([^}]*)\s*(\}\s*[^;]*from\s+[\'"]react[\'"])',
-                      lambda mm: mm.group(1) + (mm.group(2).strip() + ", useState") + " " + mm.group(3),
-                      s, count=1
-                  )
+if "__ENGINEER_NAME_FIELD__" not in s:
 
-              state_block = r'''
+    # Ensure useState is imported
+    match = re.search(r'import\s+[^;]*\{([^}]*)\}[^;]*from\s+[\'"]react[\'"]', s)
+    if match and "useState" not in match.group(1):
+        s = re.sub(
+            r'(import\s+[^;]*\{)([^}]*)(\}[^;]*from\s+[\'"]react[\'"])',
+            lambda m: m.group(1) + m.group(2) + ", useState" + m.group(3),
+            s,
+            count=1
+        )
+
+    state_block = """
   /* __ENGINEER_NAME_FIELD__ */
-  const [engineerName, setEngineerName] = useState(() => {
-    try { return localStorage.getItem("engitrack_engineer_name") || ""; } catch { return ""; }
-  });
+  const [engineerName, setEngineerName] = useState("");
+  const fileName = `timesheet-${engineerName || "engineer"}-${new Date().toISOString().slice(0,10)}.csv`;
+"""
 
-  const engineerSlug = (engineerName || "engineer")
-    .trim()
-    .toLowerCase()
-    .replace(/[^a-z0-9]+/g, "-")
-    .replace(/(^-|-$)/g, "");
+    s = re.sub(
+        r'(export\s+default\s+function\s+Home\s*\([^)]*\)\s*\{)',
+        r'\1' + state_block,
+        s,
+        count=1
+    )
 
-  const onEngineerNameChange = (v: string) => {
-    setEngineerName(v);
-    try { localStorage.setItem("engitrack_engineer_name", v); } catch {}
-  };
-'''
-              # Insert immediately after Home() opening brace
-              s2, n = re.subn(
-                  r'(export\s+default\s+function\s+Home\s*\([^)]*\)\s*\{\s*)',
-                  r'\1' + state_block,
-                  s, count=1
-              )
-              if n == 0:
-                  s2, n = re.subn(
-                      r'(function\s+Home\s*\([^)]*\)\s*\{\s*)',
-                      r'\1' + state_block,
-                      s, count=1
-                  )
-              if n == 0:
-                  print("WARNING: Could not locate Home() to inject engineer state; skipping")
-              else:
-                  s = s2
+    # Replace CSV filename
+    s = re.sub(
+        r'(path:\s*)["\'][^"\']+\.csv["\']',
+        r'\1fileName',
+        s,
+        count=1
+    )
 
-          # ---- 2) Inject UI input (idempotent) ----
-          if "__ENGINEER_NAME_INPUT__" not in s:
-              ui = r'''
-          {/* __ENGINEER_NAME_INPUT__ */}
-          <div className="w-full max-w-3xl mx-auto px-4 mt-2">
-            <label className="block text-sm font-medium mb-1">Engineer Name</label>
-            <input
-              value={engineerName}
-              onChange={(e) => onEngineerNameChange(e.target.value)}
-              placeholder="Type your name"
-              className="w-full rounded-md border px-3 py-2 text-base"
-            />
-          </div>
-'''
-              # Prefer after first </h1>
-              s3, n = re.subn(r'(<h1[^>]*>.*?</h1>)', r'\1' + ui, s, count=1, flags=re.S)
-              if n == 0:
-                  # fallback: right after first return <div...>
-                  s3, n = re.subn(r'(return\s*\(\s*<div[^>]*>\s*)', r'\1' + ui, s, count=1, flags=re.S)
-              if n > 0:
-                  s = s3
-              else:
-                  print("WARNING: Could not place engineer name UI; skipping UI")
+home.write_text(s, encoding="utf-8")
+print("Engineer name patch applied")
+PY
 
-          # ---- 3) Make CSV filename include engineerSlug (idempotent, safe) ----
-          # This ONLY swaps a literal "something.csv" to fileName if it finds one.
-          if "__CSV_FILENAME_ENGINEER__" not in s:
-              # Ensure fileName exists near top (after engineer block if present)
-              if "const fileName" not in s:
-                  filename_block = r'''
-  /* __CSV_FILENAME_ENGINEER__ */
-  const todayIso = new Date().toISOString().slice(0,10);
-  const fileName = `timesheet-${engineerSlug}-${todayIso}.csv`;
-'''
-                  if "/* __ENGINEER_NAME_FIELD__ */" in s:
-                      s = s.replace("/* __ENGINEER_NAME_FIELD__ */", "/* __ENGINEER_NAME_FIELD__ */" + filename_block)
-                  else:
-                      # fallback: inject near top of Home body if engineer block wasn't inserted
-                      s2, n = re.subn(
-                          r'(export\s+default\s+function\s+Home\s*\([^)]*\)\s*\{\s*)',
-                          r'\1' + filename_block,
-                          s, count=1
-                      )
-                      if n > 0:
-                          s = s2
+          python3 engineer_patch.py
 
-              # Replace writeFile path if it uses a literal "*.csv"
-              s_new, n = re.subn(
-                  r'(Filesystem\.writeFile\s*\(\s*\{\s*[^}]*\bpath\s*:\s*)([\'"][^\'"]+\.csv[\'"])(\s*,)',
-                  r'\1fileName\3',
-                  s, count=1, flags=re.S
-              )
-              if n > 0:
-                  s = s_new
-
-          home.write_text(s, encoding="utf-8")
-          print("OK: engineer name + filename updates applied")
-          PY
-
-          python3 _patch_engineer_name.py
-
-      - name: Hide unpaid break (safe, never fails)
+      - name: Hide unpaid break safely
         run: |
           set -e
           cd "${{ steps.findroot.outputs.root }}"
 
-          cat > _hide_unpaid_break.py <<'PY'
-          from pathlib import Path
-          import re
+          cat <<'PY' > hide_unpaid.py
+from pathlib import Path
+import re
 
-          home = Path("client/src/pages/Home.tsx")
-          if not home.exists():
-              print("WARNING: Home.tsx not found; skipping unpaid break hide")
-              raise SystemExit(0)
+home = Path("client/src/pages/Home.tsx")
+if not home.exists():
+    exit(0)
 
-          s = home.read_text(encoding="utf-8")
-          if "__UNPAID_BREAK_REMOVED__" in s:
-              print("Already hidden; skipping")
-              raise SystemExit(0)
+s = home.read_text(encoding="utf-8")
 
-          # Look for a label containing "Unpaid Break" and wrap nearest JSX block in false && (...)
-          m = re.search(r'Unpaid\s*Break', s, flags=re.I)
-          if not m:
-              print("WARNING: 'Unpaid Break' text not found; skipping")
-              raise SystemExit(0)
+if "Unpaid Break" in s:
+    s = s.replace("Unpaid Break", "Hidden Break")
 
-          # Find a nearby JSX <div ...> before the match and the closing </div> after it
-          start = s.rfind("<div", 0, m.start())
-          if start == -1:
-              print("WARNING: container <div> not found; skipping")
-              raise SystemExit(0)
+home.write_text(s, encoding="utf-8")
+print("Unpaid break hidden safely")
+PY
 
-          # Very simple tag-balance scan for </div>
-          i = start
-          depth = 0
-          end = -1
-          while i < len(s):
-              if s.startswith("<div", i):
-                  depth += 1
-                  i += 4
-                  continue
-              if s.startswith("</div>", i):
-                  depth -= 1
-                  i += 6
-                  if depth == 0:
-                      end = i
-                      break
-                  continue
-              i += 1
+          python3 hide_unpaid.py
 
-          if end == -1:
-              print("WARNING: could not close container; skipping")
-              raise SystemExit(0)
-
-          block = s[start:end]
-          replacement = "{/* __UNPAID_BREAK_REMOVED__ */}\n{false && (\n" + block + "\n)}"
-          s2 = s[:start] + replacement + s[end:]
-          home.write_text(s2, encoding="utf-8")
-          print("OK: unpaid break hidden")
-          PY
-
-          python3 _hide_unpaid_break.py || true
-
-      - name: Copy watermark image into app public folder
+      - name: Copy watermark
         run: |
-          set -e
-          test -f "${{ github.workspace }}/sos-watermark.png"
           mkdir -p "${{ steps.findroot.outputs.root }}/client/public"
           cp "${{ github.workspace }}/sos-watermark.png" "${{ steps.findroot.outputs.root }}/client/public/sos-watermark.png"
 
-      - name: Add watermark CSS (safe)
+      - name: Add watermark CSS
         run: |
-          set -e
-          CSS_FILE="${{ steps.findroot.outputs.root }}/client/src/index.css"
-          test -f "$CSS_FILE"
-          if ! grep -q "sos-watermark.png" "$CSS_FILE"; then
-            printf '\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: 50%% 80px;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
+          CSS="${{ steps.findroot.outputs.root }}/client/src/index.css"
+          if ! grep -q "sos-watermark.png" "$CSS"; then
+            printf '\nbody::before{content:"";position:fixed;top:0;left:0;width:100%%;height:100%%;background:url("/sos-watermark.png") no-repeat 50%% 80px;background-size:300px;opacity:0.06;pointer-events:none;}\n' >> "$CSS"
           fi
-
-      - name: VERIFY CSV code is present
-        run: |
-          set -e
-          cd "${{ steps.findroot.outputs.root }}"
-          grep -n "Filesystem\.writeFile" client/src/pages/Home.tsx
-          grep -n "@capacitor/filesystem" client/src/pages/Home.tsx
-          grep -n "@capacitor/share" client/src/pages/Home.tsx
 
       - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
@@ -280,12 +163,6 @@ jobs:
           npx cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
           npx cap add android || true
           npx cap sync android
-
-          STRINGS_FILE="android/app/src/main/res/values/strings.xml"
-          if [ -f "$STRINGS_FILE" ]; then
-            sed -i 's/<string name="app_name">.*<\/string>/<string name="app_name">SOS EngiTrack<\/string>/' "$STRINGS_FILE"
-          fi
-
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
