--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -24,6 +24,10 @@ jobs:
         id: findroot
         run: |
           ROOT=$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})
+          if [ -z "$ROOT" ]; then
+            echo "package.json not found"
+            exit 1
+          fi
           echo "root=$ROOT" >> $GITHUB_OUTPUT
 
       - name: Setup Node
@@ -31,7 +35,7 @@ jobs:
         with:
           node-version: 20
 
-      - name: Setup Java
+      - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -40,6 +44,11 @@ jobs:
       - name: Install dependencies
         working-directory: ${{ steps.findroot.outputs.root }}
         run: npm install
+
+      - name: Install Capacitor CLI
+        working-directory: ${{ steps.findroot.outputs.root }}
+        run: |
+          npm install -D @capacitor/cli @capacitor/core @capacitor/android
 
       - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
@@ -51,6 +60,13 @@ jobs:
           npx cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
           npx cap add android || true
           npx cap sync android
+
+          # Set app display name
+          STRINGS_FILE="android/app/src/main/res/values/strings.xml"
+          if [ -f "$STRINGS_FILE" ]; then
+            sed -i 's/<string name="app_name">.*<\/string>/<string name="app_name">SOS EngiTrack<\/string>/' "$STRINGS_FILE"
+          fi
+
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
