--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -53,15 +53,44 @@ jobs:
       - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
         run: npm run build
-
-      - name: Build Android APK
+      - name: Build Android (init + sync)
         working-directory: ${{ steps.findroot.outputs.root }}
         run: |
           npx cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
           npx cap add android || true
           npx cap sync android
-      - name: One-step fix: force Kotlin stdlib version (prevents duplicate classes)
-        working-directory: ${{ steps.findroot.outputs.root }}
+
+      - name: One-step fix: force Kotlin stdlib version
+        working-directory: ${{ steps.findroot.outputs.root }}/android
+        run: |
+          if [ ! -f build.gradle ]; then
+            echo "android/build.gradle not found"
+            exit 1
+          fi
+
+          if ! grep -q "ONE_STEP_KOTLIN_FORCE" build.gradle; then
+            cat >> build.gradle <<'GRADLE'
+
+          // ONE_STEP_KOTLIN_FORCE
+          subprojects {
+            configurations.all {
+              resolutionStrategy {
+                force "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
+                force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22"
+                force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22"
+              }
+            }
+          }
+          GRADLE
+          fi
+
+      - name: Assemble Debug APK
+        working-directory: ${{ steps.findroot.outputs.root }}/android
+        run: |
+          chmod +x gradlew
+          ./gradlew assembleDebug
+      
+    
         run: |
           set -e
           cd android || cd "${{ steps.findroot.outputs.root }}/android"
